--- a/earthquake_ml_pipeline_v2.ipynb
+++ b/earthquake_ml_pipeline_v2.ipynb
@@ -2,6 +2,7 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "6705d4bd",
       "metadata": {},
       "source": [
         "# Earthquake ML Pipeline (Colab)\n",
@@ -9,12 +10,15 @@
         "\n",
         "**Expected data format**: each earthquake `.txt` file contains two columns: time `t` and acceleration `ag`.\n",
         "\n",
-        "If you upload files via the Colab file browser, place `.txt` files into `/content/project/earthquake_data`.\n"
+        "If you upload files via the Colab file browser, place `.txt` files into `/content/earthquake/earthquake_data`.\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "aa02e623",
       "metadata": {},
+      "outputs": [],
       "source": [
         "# Install dependencies (Colab usually has these, but this avoids version errors).\n",
         "!pip -q install -U 'tensorflow>=2.12,<3' scikit-learn\n"
@@ -22,7 +26,20 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "92e9402f",
       "metadata": {},
+      "outputs": [],
+      "source": [
+        "!git clone https://github.com/TabibitoDK/earthquake.git"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "7f089e98",
+      "metadata": {},
+      "outputs": [],
       "source": [
         "import os\n",
         "import numpy as np\n",
@@ -39,10 +56,13 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "b6325c14",
       "metadata": {},
+      "outputs": [],
       "source": [
         "# Project structure\n",
-        "PROJECT_PATH = '/content/project'\n",
+        "PROJECT_PATH = '/content/earthquake'\n",
         "EQ_FOLDER = os.path.join(PROJECT_PATH, 'earthquake_data')\n",
         "DATASET_FOLDER = os.path.join(PROJECT_PATH, 'dataset_v2')\n",
         "MODEL_FOLDER = os.path.join(PROJECT_PATH, 'models_v2')\n",
@@ -58,7 +78,9 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "# Optional: upload earthquake .txt files into EQ_FOLDER\n",
         "from google.colab import files\n",
@@ -78,7 +100,9 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "# CONFIG\n",
         "FLOOR_LIST = [5, 10, 20, 30]\n",
@@ -316,7 +340,9 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "X_path = os.path.join(DATASET_FOLDER, 'X.npy')\n",
         "Y_path = os.path.join(DATASET_FOLDER, 'Y_ml.npy')\n",
@@ -363,7 +389,9 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "np.random.seed(42)\n",
         "tf.random.set_seed(42)\n",
@@ -412,7 +440,8 @@
         "    Yf = Y[idx]\n",
         "    gf = groups[idx]\n",
         "\n",
-        "    print(f'\n=== Training for floors={floor_value} ===')\n",
+        "    print(f'\n",
+        "=== Training for floors={floor_value} ===')\n",
         "    print('samples =', len(idx))\n",
         "\n",
         "    splitter = GroupShuffleSplit(n_splits=1, test_size=0.15, random_state=42)\n",
@@ -460,7 +489,9 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "# User inputs\n",
         "W_total = 8437.5\n",
