add drive feathres

--- a/earthquake_ml_pipeline_v2.ipynb
+++ b/earthquake_ml_pipeline_v2.ipynb
@@ -10,7 +10,9 @@
         "\n",
         "**Expected data format**: each earthquake `.txt` file contains two columns: time `t` and acceleration `ag`.\n",
         "\n",
-        "If you upload files via the Colab file browser, place `.txt` files into `/content/earthquake/earthquake_data`.\n"
+        "If you upload files via the Colab file browser, place `.txt` files into `PROJECT_PATH/earthquake_data`.\n",
+        "\n",
+        "This notebook mounts Google Drive so outputs persist after the runtime ends.\n"
       ]
     },
     {
@@ -56,13 +58,42 @@
     },
     {
       "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# GPU check (force GPU usage in Colab)\n",
+        "gpus = tf.config.list_physical_devices('GPU')\n",
+        "if not gpus:\n",
+        "    raise RuntimeError('No GPU found. In Colab: Runtime > Change runtime type > GPU')\n",
+        "print('GPUs:', gpus)\n",
+        "for gpu in gpus:\n",
+        "    try:\n",
+        "        tf.config.experimental.set_memory_growth(gpu, True)\n",
+        "    except Exception as e:\n",
+        "        print('Could not set memory growth:', e)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Mount Google Drive and set project path\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# Change this to your preferred folder in Drive\n",
+        "DRIVE_PROJECT_PATH = '/content/drive/MyDrive/earthquake_project'\n",
+        "PROJECT_PATH = DRIVE_PROJECT_PATH\n",
+        "print('PROJECT_PATH:', PROJECT_PATH)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "id": "b6325c14",
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Project structure\n",
-        "PROJECT_PATH = '/content/earthquake'\n",
+        "# Project structure (PROJECT_PATH set above)\n",
         "EQ_FOLDER = os.path.join(PROJECT_PATH, 'earthquake_data')\n",
         "DATASET_FOLDER = os.path.join(PROJECT_PATH, 'dataset_v2')\n",
         "MODEL_FOLDER = os.path.join(PROJECT_PATH, 'models_v2')\n",
